tests/unit/default/syntax-error/138-add-fk-child-to-parent-upd.e.t
---- IN ----
+FK%child.parent-id=>%parent.id*
---- OUT ----
---- ERR ----
syntax: expected `!` , `>` or `?` after `...parent.id*` instead of EOL at position 32 - at line 1
---- EXIT ----
1
